[package]
name = "rusty-bandwidth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.24", features = ["webp"] }
clap = { version = "4.0", features = ["derive", "env"] }
