[package]
name = "rusty-bandwidth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
# Използваме impersonate версията за заобикаляне на Cloudflare
reqwest-impersonate = "0.11"
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.25", features = ["webp", "jpeg", "png"] }
clap = { version = "4.0", features = ["derive", "env"] }
tower-http = { version = "0.4", features = ["cors"] }