[package]
name = "rusty-bandwidth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.24", features = ["webp", "jpeg", "png"] }
tower-http = { version = "0.4", features = ["cors"] }